...
        case .home: return "Home"
        case .favorites: return "Favorites"
        case .onNow: return "On Now"
        case .guide: return "Guide"
        case .onLater: return "On Later"
        case .recordings: return "Recordings"
        case .cameras: return "Cameras"
        case .weather: return "Weather"
        case .radio: return "Radio"
        case .search: return "Search"
        case .settings: return "Settings"
        case .manage: return "Manage DVR"
        }
...
